2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/SolutionFolder.cs: Fixed and simplified
	RemoveAllInDirectory.

2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs: Delete
	satellite assembly directories when cleaning. Fixes bug #400420.

2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs: Use the
	file service to delete files so that events are fired and the
	solution pad can be updated. 

2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	Added helper methods and properties for accessing to the db file
	name.

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Don't pre-load
	the mscrolib database. It is not necessary anymore.

	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
	When generating a database for an assembly, generate first in a temp
	file, and then move it to the original file. Also unlock the original
	file before copying. Fixes bug #440254.

2008-10-31  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomCecilType.cs:
	* MonoDevelop.Projects.Dom/DomCecilField.cs:
	* MonoDevelop.Projects.Dom/DomCecilEvent.cs:
	* MonoDevelop.Projects.Dom/DomCecilMethod.cs:
	* MonoDevelop.Projects.Dom/DomCecilProperty.cs:
	* MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs: fixed 'Bug 440366
	- Cannot override base methods'.

2008-10-31  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs:
	* MonoDevelop.Projects.Dom.Serialization/DatabaseProjectDom.cs:
	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
	fixed 'Bug 436879 - 'exe' references not added to code completion'.

2008-10-31  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/IMember.cs: